# solana-token-lottery

./: .gitignore  Anchor.toml  ERRORS.md  README.md  package-lock.json  package.json
programs/anchor/: Cargo.toml
programs/anchor/src/: constants.rs  error.rs  lib.rs  mod.rs  state.rs
programs/anchor/src/instructions/: admin.rs  buy_ticket.rs  choose_winner.rs  claim_prize.rs  commit_winner.rs  mod.rs
tests/: token-lottery.ts
